# http1-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
assets/files/: data.json  string.txt
examples/: dynamic.rs  todo_app.rs
examples/basic_auth/: main.rs
examples/chat_app/: constants.rs  main.rs  models.rs
examples/chat_app/routes/: api.rs  mod.rs
examples/chat_app/static/: api.js  index.html  login.html  main.js  styles.css
examples/cors/: index.html  main.rs  server.mjs
examples/file_server/: main.rs
examples/file_server/static/: index.html  styles.css
examples/hello_world/: main.rs
examples/multipart_form/: main.rs
examples/photo_gallery/: main.rs
examples/photo_gallery/public/: styles.css
examples/pre_render/: main.rs
examples/sessions/: main.rs
examples/sse/: index.html  main.rs
examples/template_html/: main.rs
examples/todo_app/: components.rs  consts.rs  db.json  db.rs  main.rs  models.rs  routes.rs
examples/todo_app/routes/: api.rs  mod.rs  models.rs  pages.rs
examples/todo_app_fullstack/: main.rs  models.rs
src/: body.rs  error.rs  handler.rs  lib.rs  main.rs  page.html  server.rs  status.rs
src/body/: http_body.rs  mod.rs
src/common/: date_time.rs  mod.rs  thread_pool.rs  thread_spawner.rs
src/headers/: headers.rs  mod.rs  name.rs  non_empty_list.rs
src/http/: headers.rs  method.rs  mod.rs  request.rs  response.rs  status.rs  url.rs  version.rs
src/protocol/: h1.rs
src/response/: into_response.rs  mod.rs  sse.rs
src/runtime/: mod.rs  single_thread_runtime.rs
src/uri/: mod.rs  scheme.rs
(+27 files in other folders)
